Include blosc_plugin in the library
Compile blosc_plugin into the library so it can be used as a dynamic HDF5 plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ ExternalProject_Add(blosc
 
 
 # sources
-set(SOURCES src/blosc_filter.c)
+set(SOURCES src/blosc_filter.c src/blosc_plugin.c)
 
 # dependencies
 if(MSVC)
